--- a/tecnicas.html
+++ b/tecnicas.html
@@ -1,13 +1,8 @@
-<!-- INTEGRANTES -->
-<!-- Paloma Tamayo -->
-<!-- Angelina Mendoza -->
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Google font -->
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
     <!-- Enlaza la biblioteca Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <!-- BOOTSTRAP 5 CSS -->
@@ -68,8 +63,6 @@
                   <li class="nav-item d-flex justify-content-center   ms-auto mt-3">
                     <!-- a=crea un enlace/crea una clase=estilo de bootstrap/ icono/texto en color blanco/ texto-->
                     <a class="nav-link text-white" href="http://127.0.0.1:5501/login.html"></i>Login</a>
-                    <!-- icono user -->
-                    <i class="fas fa-user text-white w-100 justify-content-center m-3"></i>
                 </li>
                 <!-- COLUMNA 7 -->
                 <li class="nav-item d-flex justify-content-center   ms-auto mt-3">
@@ -87,103 +80,48 @@
       </div>
   </nav>
 
-  <!-- CARRUSEL FOTOS PRODUCTOS DESTACADOS -->
-<div id="carouselExampleDark" class="carousel carousel-dark slide mx-auto d-block">
-  <div class="carousel-indicators">
-    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
-    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
-    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="3" aria-label="Slide 4"></button>
-  </div>
-  <div class="carousel-inner mx-auto">
-    <div class="carousel-item active" data-bs-interval="10000">
-      <img src="./assets/img/escultura1.jpg" class="d-block w-100" alt="...">
-      <div class="carousel-caption d-none d-md-block text-white">
-        <h3 class="h3 text-white">ESCULTURA EN MADERA</h3>
-        <a class="vin-detalle" href="http://127.0.0.1:5501/productos.html"><p class="detalle text-white">Ver detalles</p></a>        
-      </div>
-    </div>
-    <div class="carousel-item" data-bs-interval="2000">
-      <img src="./assets/img/joya2.jpg" class="d-block w-100" alt="...">
-      <div class="carousel-caption d-none d-md-block text-white">
-        <h3 class="h3 text-white">PRODUCTO 2</h3>
-        <a class="vin-detalle" href="http://127.0.0.1:5501/productos.html"><p class="detalle text-white">Ver detalles</p></a>     
-      </div>
-    </div>
-    <div class="carousel-item">
-      <img src="./assets/img/pintura1.jpg" class="d-block w-100" alt="...">
-      <div class="carousel-caption d-none d-md-block text-white">
-        <h3 class="h3 text-white">PRODUCTO 3</h3>
-        <a class="vin-detalle" href="http://127.0.0.1:5501/productos.html"><p class="detalle text-white">Ver detalles</p></a>     
-      </div>
-    </div>
-    <div class="carousel-item">
-      <img src="./assets/img/tejido1.jpg" class="d-block w-100" alt="...">
-      <div class="carousel-caption d-none d-md-block text-white">
-        <h3 class="h3 text-white">PRODUCTO 4</h3>
-        <a class="vin-detalle" href="http://127.0.0.1:5501/productos.html"><p class="detalle text-white">Ver detalles</p></a>     
-      </div>
-    </div>
-  </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button>
-</div>
+    <!-- TITULO PAG -->
+    <h6 class="h6 text-center m-5">TÉCNICAS</h6>
 
-  
-
-  <!-- TEXTO NOSOTROS -->
-  <h5 class="h5 text-center mt-5">NOSOTROS</h5>
-  <div class="container-fluid text-center m-5 p-5">
-    <div class="row">
-      <p class="parrafo">Grupo Cero es un colectivo de artistas apasionados y diversos, que abarca una amplia gama de disciplinas artísticas, desde la pintura y la escultura hasta la música y el teatro. Nuestro grupo está formado por individuos talentosos que comparten una visión común: fomentar el crecimiento personal y profesional a través de la cooperación y el intercambio de ideas.</p>
-    </div>
-    <div class="row">
-      <p class="parrafo">Nuestra Misión:
-        En Grupo Cero, nuestra misión es crear un espacio inclusivo y enriquecedor donde los artistas puedan colaborar, experimentar y crecer juntos. Nos esforzamos por fomentar la creatividad, la innovación y el apoyo mutuo en todas nuestras actividades, desde exposiciones y presentaciones hasta talleres y eventos comunitarios.</p>
-    </div>
-
-  </div>
-
-    <!-- ARTISTAS Y TECNICAS -->
-  <div class="container-fluid m-5 p-5 text-center">
-    <!-- fila 1 -->
-    <div class="row">
-      <!-- COLUMNA 1 -->
-      <!-- PARA PANTALLAS SM=12 MD=6 ORDEN EN PANTALLAS SM (576px) Y ORDEN EN PANTALLAS MD -->
-      <div class="col-12 col-md-6 order-sm-1 order-md-1 justify-content-center">
-        <img class="fotos" src="./assets/img/artista1.jpg" alt="">
+    <!-- TARJETAS TECNICAS -->
+    <div class="row row-cols-1 row-cols-md-2 g-4 p-5">
+        <div class="col">
+          <div class="card">
+            <img src="./assets/img/pintura3.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">PINTURA</h5>
+              <p class="card-text">Técnica artística que utiliza pigmentos aplicados sobre una superficie, generalmente lienzo, papel o muro, mediante pinceles, espátulas u otros utensilios. La pintura puede abordar una amplia variedad de temas y estilos, desde paisajes naturales hasta abstracciones abstractas, y se ha utilizado a lo largo de la historia como medio de expresión personal, comunicación cultural y registro histórico.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="./assets/img/orfebre2.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">ORFEBRERÍA</h5>
+              <p class="card-text">Arte de trabajar metales preciosos como oro, plata y bronce para crear objetos decorativos o funcionales, como joyas, candelabros o reliquias religiosas. Se caracteriza por su meticulosa atención al detalle y la habilidad en el manejo de herramientas especializadas como el martillo, el buril y el soldador.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="./assets/img/tejido2.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">TEJIDO</h5>
+              <p class="card-text">Arte de entrelazar hilos, ya sea a mano o en telares, para crear textiles como telas, tapices, alfombras y prendas de vestir. Esta técnica puede implicar una amplia gama de materiales, desde fibras naturales como algodón y lana hasta sintéticas como el poliéster, y se caracteriza por su variedad de patrones y texturas.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="./assets/img/escultura3.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">ESCULTURA</h5>
+              <p class="card-text">Arte de crear formas tridimensionales mediante la manipulación de materiales como piedra, madera, metal, arcilla o yeso. Las esculturas pueden ser abstractas o figurativas y pueden variar en tamaño desde pequeñas estatuillas hasta monumentos monumentales. Esta forma de arte ha existido desde tiempos prehistóricos y ha evolucionado a lo largo de la historia, reflejando las creencias, valores y estilos estéticos de diversas culturas.</p>
+            </div>
+          </div>
+        </div>
       </div>
-      <!-- COLUMNA 2 -->
-      <div class="col-12 col-md-6 order-sm-3 order-md-2 justify-content-center">
-        <img class="fotos" src="./assets/img/tecnica1.jpg" alt="">
-      </div>  
-          <!-- COLUMNA 3-->
-      <div class="col-12 col-md-6 order-sm-2 order-md-3 justify-content-center">
-        <a class="subtitulos text-center" href="http://127.0.0.1:5501/artistas.html"><h4>Artistas</h4></a>
-      </div>
-      <!-- COLUMNA 4 -->
-      <div class="col-12 col-md-6 order-sm-4 order-md-4 justify-content-center">
-        <a class="subtitulos text-center" href="http://127.0.0.1:5501/tecnicas.html"><h4>Técnicas</h4></a>
-      </div>
-    </div>
-  </div>
-
-  <!-- VOLVER A INICIO -->
-  <div class="container-fluid text-center m-5">
-    <div class="row">
-      <div class="col-12">
-        <a class="subtitulos" href="http://127.0.0.1:5501/index.html">
-          <button type="button" class="btn btn-light">VOLVER A INICIO</button>
-        </a>
-      </div>
-    </div>
-  </div>
 
   <!-- FORMULARIO DE CONTACTO -->
     <!-- CONTACTANOS -->
@@ -219,18 +157,19 @@
       <!-- botón de enviar -->
       <button type="submit" class="btn btn-lg btn-success mt-5">Enviar</button>
   </form>         
-    
+
+   
   <!-- PIE DE PAGINA -->
   <!-- nombre clase/texto centrado/padding -5 -->
   <footer class="fin text-center p-5">
-      <img class="logo2" src="./assets/img/logo-blanco.png" alt="">
-      <!-- texto blanco/margen de todos lados 5 -->
-      <p class="text-white m-5">
-          <!-- icono copy/color blanco/margen suoerior 5 -->
-          <i class="fas fa-copyright text-white"></i>
-          2004 - Todos los derechos reservados.
-      </p>
-  </footer>
+    <img class="logo2" src="./assets/img/logo-blanco.png" alt="">
+    <!-- texto blanco/margen de todos lados 5 -->
+    <p class="text-white m-5">
+        <!-- icono copy/color blanco/margen suoerior 5 -->
+        <i class="fas fa-copyright text-white"></i>
+        2004 - Todos los derechos reservados.
+    </p>
+</footer>
 
     <!-- SCRIPT DE FUNCIONALIDAD -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" ></script>
